--- a/SceneGraph.SDL/CMakeLists.txt
+++ b/SceneGraph.SDL/CMakeLists.txt
@@ -19,8 +19,8 @@ add_library(scenegraph-sdl
         Prefabs/Prefabs.cpp
     )
 
-target_include_directories(scenegraph-sdl PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../glad/include ${CMAKE_CURRENT_SOURCE_DIR}/../Scenegraph ${SDL2_INCLUDE_DIR} ${GLM_INCLUDE_DIR})
-target_link_libraries(scenegraph-sdl LINK_INTERFACE_LIBRARIES scenegraph glad ${SDL2_LIBRARY})
+target_include_directories(scenegraph-sdl PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/glad/include ${CMAKE_SOURCE_DIR}/SceneGraph ${SDL2_INCLUDE_DIR} ${GLM_INCLUDE_DIR})
+target_link_libraries(scenegraph-sdl LINK_INTERFACE_LIBRARIES scenegraph glad ${SDL2_LIBRARY} ${CMAKE_DL_LIBS})
 
 set_target_properties( 
     scenegraph
