--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,20 +3,21 @@ project(KITSUNE_SCENEGRAPH)
 enable_testing()
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/CMake")
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 option(EnableTest "Enable unit testing" ON)
 
 find_package(Bullet3 REQUIRED)
+find_package(GLM REQUIRED)
+
 if (EnableTest)
     # Check for boost test, but it is not required
     find_package(Boost 1.59 COMPONENTS unit_test_framework)
 endif()
 # SDL 2 isn't required. If found, build SDL module
 find_package(SDL2)
-find_package(GLM)
 
 if (NOT Boost_FOUND)
     message(AUTHOR_WARNING "boost test >= 1.59 not found, disabling unit testing!")
@@ -31,7 +32,7 @@ if (Boost_FOUND AND EnableTest)
     add_subdirectory(SceneGraph.Test)
 endif()
 
-if (SDL2_FOUND AND GLM_FOUND)
+if (SDL2_FOUND)
     add_subdirectory(glad)
     add_subdirectory(SceneGraph.SDL)
     add_subdirectory(SceneGraph.SDL.Example)
