Improve the light component
Add ambiend, diffuse and specular color components

--- a/SceneGraph.Test/CMakeLists.txt
+++ b/SceneGraph.Test/CMakeLists.txt
@@ -1,5 +1,10 @@
 add_compile_definitions(GLM_ENABLE_EXPERIMENTAL)
 
+add_executable(scenegraph-test-multiptr multiptrtest.cpp)
+target_include_directories(scenegraph-test-multiptr PUBLIC ../SceneGraph ${Boost_INCLUDE_DIR})
+target_link_libraries(scenegraph-test-multiptr LINK_PUBLIC ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} scenegraph)
+add_test(NAME scenegraph-test-multiptr COMMAND scenegraph-test-multiptr -l all)
+
 add_executable(scenegraph-test-component componenttest.cpp)
 target_include_directories(scenegraph-test-component PUBLIC ../SceneGraph ${Boost_INCLUDE_DIR})
 target_link_libraries(scenegraph-test-component LINK_PUBLIC ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} scenegraph)
